# cs254

./: .Xauthority  .Xclients-default  .Xdefaults  .bash_history  .bash_profile  .cshrc  .gitmodules  .login  .profile  .vim_mru_files  .viminfo  README.md
.cache/ctrlp/mru/: cache.txt
.mozilla/firefox/Crash Reports/: InstallTime20150827075926
.ssh/: known_hosts
A1/: README  SUBMITTED
A1/ada/: Makefile  README  main.adb  main.out  note
A1/c#/: README  note
A1/cpp/: main.cpp  main.out
A1/ocaml/: Makefile  README  main.cmi  main.cmo  main.ml  main.out  note
A1/prolog/: README  main.pl
A1/python/: README
A1/scheme/: README  main.scm  note
A2/parser/: Makefile  README.txt  parse  parse.cpp  scan.cpp  scan.h  test.txt  test4.txt  test5.txt  test6.txt
A3/: README
A3/Interpreter/: interpreter.ml
A3/Trivia/: binomial.ml
A4/: README.md  xref.rb
A4/test/: Makefile  comp.c  comp.h  test  test.c  test.dump
A4/test/Booking/: booking.c  booking.h
A5/: CMakeLists.txt  README.md  main.cpp  oset.cc
A5/base/: README.md
A5/base/include/oset/: oset.hpp
A5/base/src/: main.cpp
A5/base/test/: CMakeLists.txt  double_test.cpp  int_test.cpp  main_test.cpp
A5/extra/: CMakeLists.txt  README.md
A5/extra/include/oset/: oset.hpp
A5/extra/src/: CMakeLists.txt  main.cpp
A5/extra/test/: CMakeLists.txt  back_iter.cpp  int_test.cpp  string_test.cpp
A5/include/oset/: oset.hpp
A5/lib/: CMakeLists.txt  oset.hpp
A5/src/: main.cpp
A5/test/: CMakeLists.txt  main_test.cpp  sample_tests  string_test.cpp
cs454/A1/: SUBMITTED
cs454/A1/ada/: Makefile  main.adb  main.ali  main.out  test  test.adb  test.ali
cs454/A1/c#/: Makefile  main.cs
cs454/A1/cpp/: Makefile  README  main.cpp  main.out
cs454/A1/ocaml/: Makefile  main.cmi  main.cmo  main.ml  main.out
cs454/A1/prolog/: Makefile  main.pl  note
cs454/A1/python/: main.py
cs454/A1/scheme/: Makefile  main.scm  note
cs454/A2/parser/: Makefile  parse  parse.c  parse.cpp  scan.c  scan.cpp
